--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,19 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 org.gradle.jvmargs=-Xmx1G
-org.gradle.daemon=false
-org.gradle.debug=false
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
 
-#read more on this at https://github.com/neoforged/NeoGradle/blob/NG_7.0/README.md#apply-parchment-mappings
+#read more on this at https://github.com/neoforged/ModDevGradle?tab=readme-ov-file#better-minecraft-parameter-names--javadoc-parchment
 # you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
-neogradle.subsystems.parchment.minecraftVersion=1.21
-neogradle.subsystems.parchment.mappingsVersion=2024.11.10
+parchment_minecraft_version=1.21
+parchment_mappings_version=2024.07.28
 # Environment Properties
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
 # The Minecraft version must agree with the Neo version to get a valid artifact
 minecraft_version=1.21
+jei_minecraft_version=1.21.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
@@ -22,22 +25,32 @@ neo_version_range=[21.0.0-beta,)
 # The loader version range can only use the major version of FML as bounds
 loader_version_range=[4,)
 
+## Depenency Properties
+jei_version=19.21.0.247
+
+veil_version=1.0.0.25
+
+emi_minecraft_version=1.21
+emi_version=1.1.13+1.21.1
+
+patchouli_version=1.21-87-NEOFORGE-SNAPSHOT
+
 ## Mod Properties
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=examplemod
+mod_id=stellar_sorcery
 # The human-readable display name for the mod.
-mod_name=Example Mod
+mod_name=Stellar Sorcery
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0.0
+mod_version=1.0.0-1.21.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.example.examplemod
+mod_group_id=net.zuperzv.metal_morph
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
+mod_authors=ZuperZV
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_description=The way to generate valuable items.\n   Get an Armadillo and transform it into anything you want.
